--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "mongoose": "^7.4.4"
+  },
+  "devDependencies": {
+    "express": "^4.18.2",
+    "jest": "^29.6.3",
+    "supertest": "^6.3.3"
   }
 }
