--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.4",
+    "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
